# PatchBukkit

./: .gitignore  ARCHITECTURE.md  README.md  build.sh
.github/ISSUE_TEMPLATE/: support-plugin.md
.github/workflows/: gradle.yml  rust.yml
examples/BasicPlugin/: build.gradle  settings.gradle
examples/BasicPlugin/src/main/java/org/basicplugins/basicPlugin/: BasicPlugin.java  PlayerJoinListener.java
examples/BasicPlugin/src/main/resources/: paper-plugin.yml
java/: settings.gradle.kts
java/patchbukkit/: build.gradle.kts
java/patchbukkit/src/main/java/org/patchbukkit/: CallbackValue.java  NativeCallbacks.java  PatchBukkitEventManager.java  PatchBukkitPluginClassLoader.java  PatchBukkitPluginLoader.java  PatchBukkitPluginManager.java  PatchBukkitServer.java  PatchBukkitServerBuildInfo.java  PluginLoader.java
java/patchbukkit/src/main/java/org/patchbukkit/bridge/: BridgeUtils.java  NativePatchBukkit.java
java/patchbukkit/src/main/java/org/patchbukkit/command/: CommandFactory.java  PatchBukkitCommandMap.java  PatchBukkitCommandSender.java  PatchBukkitConsoleCommandSender.java
java/patchbukkit/src/main/java/org/patchbukkit/entity/: PatchBukkitAbstractArrow.java  PatchBukkitArmorStand.java  PatchBukkitEgg.java  PatchBukkitEntity.java  PatchBukkitHumanEntity.java  PatchBukkitItem.java  PatchBukkitLivingEntity.java  PatchBukkitPlayer.java  PatchBukkitProjectile.java
java/patchbukkit/src/main/java/org/patchbukkit/events/: PatchBukkitEventFactory.java  PatchBukkitEventManager.java
java/patchbukkit/src/main/java/org/patchbukkit/registry/: PatchBukkitRegistryAccess.java  PatchBukkitTag.java
java/patchbukkit/src/main/java/org/patchbukkit/scheduler/: PatchBukkitScheduler.java
java/patchbukkit/src/main/java/org/patchbukkit/world/: PatchBukkitBlock.java  PatchBukkitBlockState.java  PatchBukkitWorld.java
java/protoc-gen-ffi/: build.gradle.kts
java/protoc-gen-ffi/src/main/java/org/patchbukkit/protocgen/: FfiGenerator.java
proto/google/protobuf/: empty.proto  wrappers.proto
proto/patchbukkit/: block.proto  bridge.proto
proto/patchbukkit/bridge/: native.proto
proto/patchbukkit/common/: abilities.proto  events.proto  types.proto
proto/patchbukkit/events/: block_events.proto  event.proto  player_events.proto  server_events.proto  world_events.proto
rust/: Cargo.toml  build.rs
rust/src/: lib.rs
rust/src/commands/: mod.rs
rust/src/config/: spigot.rs
rust/src/events/: handler.rs  join.rs  mod.rs
rust/src/java/: jvm.rs  mod.rs
rust/src/java/jvm/: command_executor.rs  commands.rs  mod.rs  worker.rs
rust/src/java/native_callbacks/: abilities.rs  block.rs  events.rs  location.rs  mod.rs  registry.rs  world.rs
rust/src/java/plugin/: event_manager.rs
rust/src/plugin/: event_manager.rs  manager.rs  mod.rs
rust/src/proto/: mod.rs
