[package]
name = "patchbukkit"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
pumpkin = { git = "https://github.com/Pumpkin-MC/Pumpkin.git", branch = "master", package = "pumpkin" }
pumpkin-util = { git = "https://github.com/Pumpkin-MC/Pumpkin.git", branch = "master", package = "pumpkin-util" }
pumpkin-api-macros = { git = "https://github.com/Pumpkin-MC/Pumpkin.git", branch = "master", package = "pumpkin-api-macros" }

futures = "0.3"
tokio = "1"
log = "0.4"
glob = "0.3.3"
j4rs = { version = "0.24" }
j4rs_derive = "0.1"
rust-embed = { version = "8.11.0", features = ["interpolate-folder-path"] }
walkdir = "2"
zip = "7.2"

serde-saphyr = "0.0.16"
serde = { version = "1", features = ["derive"] }

anyhow = "1.0"

[build-dependencies]
j4rs = { version = "0.24", artifact = "cdylib", lib = true }
env_logger = "0.11.8"
log = "0.4"

[profile.release]
lto = true
