[package]
name = "patchbukkit"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
pumpkin = { git = "https://github.com/Pumpkin-MC/Pumpkin.git", branch = "master", package = "pumpkin" }
pumpkin-data = { git = "https://github.com/Pumpkin-MC/Pumpkin.git", branch = "master", package = "pumpkin-data" }
pumpkin-protocol = { git = "https://github.com/Pumpkin-MC/Pumpkin.git", branch = "master", package = "pumpkin-protocol" }
pumpkin-util = { git = "https://github.com/Pumpkin-MC/Pumpkin.git", branch = "master", package = "pumpkin-util" }
pumpkin-api-macros = { git = "https://github.com/Pumpkin-MC/Pumpkin.git", branch = "master", package = "pumpkin-api-macros" }

tokio = "1"
log = "0.4"
glob = "0.3.3"
j4rs = { version = "0.24" }
j4rs_derive = "0.1"
rust-embed = { version = "8.11.0", features = ["interpolate-folder-path"] }
walkdir = "2"
zip = "7.2"

anyhow = "1.0"
uuid = "1.20.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-saphyr = "0.0.17"

rand = { git = "https://github.com/rust-random/rand"}
prost = "0.14"

[build-dependencies]
j4rs = { version = "0.24", artifact = "cdylib", lib = true }
env_logger = "0.11.8"
log = "0.4"
prost-build = "0.14"
glob = "0.3"

[profile.release]
lto = true

[lints.clippy]
# Groups
all = { level = "deny", priority = -1 }
# nursery = { level = "deny", priority = -1 }
# pedantic = { level = "deny", priority = -1 }
# cargo = { level = "deny", priority = -1 }

multiple_crate_versions = "allow"
unnecessary_fallible_conversions = "allow"
not_unsafe_ptr_arg_deref = "allow" # Not sure about this one


